<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom">

    <RelativeLayout
        android:id="@id/default_header_view"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/default_refresh_height">

        <LinearLayout
            android:id="@+id/custom_header_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/custom_header_hint_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_hint_normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding_and_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_last_time"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/custom_header_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/past_time"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/custom_header_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/custom_header_linear_layout"
            android:layout_centerVertical="true"
            android:layout_marginLeft="-35dp"
            android:src="@drawable/ic_refresh_arrow" />

        <ProgressBar
            android:id="@+id/custom_header_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@id/custom_header_linear_layout"
            android:layout_centerVertical="true"
            android:layout_marginLeft="-40dp"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>